--- a/src/componentes/Grid/style.css
+++ b/src/componentes/Grid/style.css
@@ -10,7 +10,7 @@
 
 .card-content{
   background-color: #6C63FF;
-    width: 320px;
+  max-width: 320px;
   padding: 20px;
   border-radius: 4px;
   color: white;
