--- a/src/componentes/Grid/style.css
+++ b/src/componentes/Grid/style.css
@@ -11,6 +11,7 @@
 .card-content{
   background-color: #6C63FF;
   max-width: 320px;
+  min-width: 300px;
   min-height: 300px;
   padding: 20px;
   border-radius: 4px;
