--- a/src/componentes/Grid/style.css
+++ b/src/componentes/Grid/style.css
@@ -1,9 +1,9 @@
 .grid{
   margin-top: 100px;
   background-color: #191919;
-  padding: 100px 0; 
+  padding: 100px 25px ; 
   display: flex;
-  justify-content: space-between;
+  align-items: start;
   flex-wrap: wrap;
   gap: 20px;
 }
